Handle OnErrorEventHandler in JSEventListener https://bugs.webkit.org/show_bug.cgi?id=211597

Reviewed by NOBODY (OOPS!).

When an onerror event handler is added via `attributeChanged`, the
event listener is always initialized via `JSLazyEventListener` so
the callback always handle with a single parameter, `event`. To fix
the issue, we can add a boolean flag in `JSEventListener` to add more
args to the callback when the flag is true.

* LayoutTests/imported/w3c/web-platform-tests/html/webappapis/scripting/events/event-handler-sourcetext-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/webappapis/scripting/events/onerroreventhandler-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/webappapis/scripting/processing-model-2/body-onerror-compile-error-data-url-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/webappapis/scripting/processing-model-2/body-onerror-compile-error-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/webappapis/scripting/processing-model-2/body-onerror-runtime-error-expected.txt:
* Source/WebCore/bindings/js/JSErrorHandler.cpp:
(WebCore::JSErrorHandler::JSErrorHandler):
* Source/WebCore/bindings/js/JSEventListener.cpp:
(WebCore::JSEventListener::JSEventListener):
(WebCore::JSEventListener::handleEvent):
* Source/WebCore/bindings/js/JSEventListener.h:
(WebCore::JSEventListener::isWindowOnError const):
* Source/WebCore/bindings/js/JSLazyEventListener.cpp:
(WebCore::JSLazyEventListener::JSLazyEventListener):
(WebCore::JSLazyEventListener::initializeJSFunction const):
(WebCore::JSLazyEventListener::create):